--- a/tanukiLand.html
+++ b/tanukiLand.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./tanuki.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="./tanuki.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="./_css/tanuki-land.css">
-  <script type='text/javascript' src='./tanuki-land.js'>
+  <link rel="stylesheet" href="./css/tanuki-land.css">
+  <script type='text/javascript' src='./js/tanuki-land.js'>
   </script>
   <script src="https://kit.fontawesome.com/5dbdfdb95d.js" crossorigin="anonymous"></script>
   <title>狸貓星樂園</title>
@@ -64,7 +64,7 @@
 
       <div class="btn-wrap">
         <button id="checkLoginDataBtn" @click="checkLoginData" class="login-btn">登入</button>
-        <button class="suprise-btn"><a id="surpriseBtn" href="https://www.buymeacoffee.com/tanuki.jr" target="_blank">狸貓叫你點一下~</a></button>
+        <button class="surprise-btn"><a id="surpriseBtn" href="https://www.buymeacoffee.com/tanuki.jr" target="_blank">狸貓叫你點一下~</a></button>
       </div>
 
     </div>
